--- a/pages/8.html
+++ b/pages/8.html
@@ -11,7 +11,7 @@
 
                 <p>
                     Two metric tonnes of CO<sub>2</sub> have been offset in your name, via CarbonFund.org.<br />
-                    <a href="https://www.google.com/" target="_blank">See certificate >></a>
+                    <a href="./E-Certificate.pdf" target="_blank">See certificate >></a>
                 </p>
             </div>
         </div>
