--- a/0.html
+++ b/0.html
@@ -12,5 +12,5 @@
         <p>Those are the two browsers I tested but if you want to roll the dice you could use something like Safari.</p>
         <p>Just again make sure it's in a proper browser window not on a phone.</p>
         <p><em>Is this going to be worth the effort?  Who knows.</em></p>
-        <p><a href="./pages/1.html">Begin >></a></p>
+        <p><a href="/pages/1.html">Begin >></a></p>
 </html>
