Activate secret santa Christmas reveal.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <link rel="stylesheet" href="./pages/style.css" />
         <link rel="shortcut icon" href="./favicon.ico">
     </head>
-    <body id="page0" style="text-align: center;">
-        <p>Good news - your Secret Santa gift will appear here on Christmas.</p>
-        <p>But it's not Christmas yet so guess you'll have to wait for now.</p>
-        <p>Here you can watch this old chestnut while you wait for the big day.</p>
-        <!-- and if you're wondering if the link to the gift is hidden in the source code you are out of luck-->
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/gNqQL-1gZF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <body id="page0">
+        <p>Because responsive web design is hard, this website is best experienced on a computer instead of a phone.</p>
+        <p>Also, if you can, it would be best to maximize the browser window.</p>
+        <p>Oh and if you're wondering what browser would work best I would say probably Chrome or Firefox.</p>
+        <p>Those are the two browsers I tested but if you want to roll the dice you could use something like Safari.</p>
+        <p>Just again make sure it's in a proper browser window not on a phone.</p>
+        <p><em>Is this going to be worth the effort?  Who knows.</em></p>
+        <p><a href="/pages/1.html">Begin >></a></p>
 </html>
